6. обновил все ручки
